--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -18,7 +18,7 @@
 			<div class="block-right">
 				<p>Телефоны: 220-38-73, 270-40-11</p>
 				<p>Адресс: улица Жуковского, 82</p>
-				<p>Электронная почта: uspex07@mail.ru</p>
+				<p>Электронная почта: uspex07@@mail.ru</p>
 			<div class="navigation">
 				<h2>Что Вас интересует?</h2>
 				<hr>
