--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-	<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheet/style.css")">
+	<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/style.css")">
 	<script src="@routes.Assets.at("javascripts/jquery-1.11.3.min.js")"></script>
 	<script type="text/javascript" src="@routes.Assets.at("javascripts/script.js")"></script>
 	<title>Адвокатское бюро: Успех</title>
