--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -16,7 +16,7 @@
 				<h1>"Успех"</h1>
 			</div>
 			<div class="block-right">
-				<p>Телефоны: 220-38-73, 270-40-11</p>
+				<p>Телефоны: 220-38-73, 270-40-11, (066) 401-59-88,(067) 731-86-05</p>
 				<p>Адресс: улица Жуковского, 82</p>
 				<p>Электронная почта: uspex07@@mail.ru</p>
 			<div class="navigation">
