--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,6 +2,7 @@
 <head>
 	<meta meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name='yandex-verification' content='56ff149701789281' />
+	<meta name="google-site-verification" content="ZvvfbouG8pB8UjsbQY-YKVvyVZqhKbe5mG7XQSvJ5V4" />
 	<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/style.css")">
 	<script src="@routes.Assets.at("javascripts/jquery-1.11.3.min.js")"></script>
 	<script type="text/javascript" src="@routes.Assets.at("javascripts/script.js")"></script>
