--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -20,7 +20,7 @@
 			<div class="block-right">
 				<p>Телефоны: 220-38-73, 270-40-11<br>
 				(066) 401-59-88,(067) 731-86-05</p>
-				<p>Адресс: улица Жуковского, 82</p>
+				<p>Адресс: Запорожье, улица Жуковского, 82</p>
 				<p>Электронная почта: uspex07@@mail.ru</p>
 			<div class="navigation">
 				<h2>Что Вас интересует?</h2>
