Alpha 1. All functionality. TODO - fix angular parts.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,108 +1,28 @@
 <html>
 <head>
 	<meta meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-	<meta name='yandex-verification' content='56ff149701789281' />
-	<meta name="google-site-verification" content="ZvvfbouG8pB8UjsbQY-YKVvyVZqhKbe5mG7XQSvJ5V4" />
-	<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/style.css")">
-	<script src="@routes.Assets.at("javascripts/jquery-1.11.3.min.js")"></script>
-	<script type="text/javascript" src="@routes.Assets.at("javascripts/script.js")"></script>
+
+	<script src="@routes.Assets.at("javascripts/jquery-2.2.2.min.js")"></script>
+	<script src="@routes.Assets.at("javascripts/angular.min.js")"></script>
+	<script src="@routes.Assets.at("javascripts/app.ang.js")"></script>
 	<title>Адвокатское бюро: Успех</title>
 </head>
-<body>
+<body ng-app="main-app" ng-controller="AppCtrl">
+<div>
+	<input type="text" name="url_of_site" ng-model="site_url">
+	<input type="text" name="html_tags" ng-model="tags">
+	<input type="button" ng-click="testing_data(site_url, tags)" value="Testing">
 
-	<div id="header">
-		<div class="img-overlay">
-			<div class="name">
-				<h2>Адвокатское бюро:</h2>
-				<br>
-				<h1>"Успех"</h1>
-			</div>
-			<div class="block-right">
-				<p>Телефоны: 220-38-73, 270-40-11<br>
-				(066) 401-59-88,(067) 731-86-05</p>
-				<p>Адресс: Запорожье, улица Жуковского, 82</p>
-				<p>Электронная почта: uspex07@@mail.ru</p>
-			<div class="navigation">
-				<h2>Что Вас интересует?</h2>
-				<hr>
-				<ul>
-					<a href="#ab"><li>О Нас</li></a>
-					<a href="#mp"><li>На карту</li></a>
-				</ul>
-			</div>
-			</div>
-		</div>
-	</div>
+	<textarea ng-model="tesing_answ">
+	</textarea>
 
-	<div id="head">
+	{{ errors }}
 
-	</div>
+	<input type="button" ng-click="generate_link(site_url, tags)" value="Generate link">
+	<div ng-if="link-generate">Your generate link : {{ link_of }}</div>
+</div>
 
-	<div id="block-info">
-		<div class="about" id="ab">
-			<h1>О Нас</h1>
-			<p>
-				Общество с ограниченной ответственностью «Адвокатское бюро «Успех» основано в мае 2007 года. Бюро оказывает разнообразные юридические услуги национальному бизнесу, органам государственной власти и физическим лицам на всей территории Украины.
-				<br>
-				<br>
-				Специалисты Бюро, имея богатый опыт и стаж работы в судебных и правоохранительных органах, предоставляют широкий спектр юридических услуг, включая юридические консультации и разрешение споров в областях уголовного, гражданского, корпоративного, административного, семейного, трудового, жилищного, земельного и аграрного права, недвижимости и строительства, налогообложения и социального обеспечения, транспортного права и таможни.
-				<br>
-				<br>
-				В своей практике мы сочетаем опыт работы на рынках с международными профессиональными стандартами. Для решения задач клиентов мы предлагаем индивидуальный комплексный подход, сочетающий юридический консалтинг, представление интересов клиентов в органах государственной власти, взаимодействие со средствами массовой информации и общественностью и другие услуги.
-				<br>
-				<br>
-				Благодаря своему профессиональному опыту наши юристы отлично разбираются во  внутренних особенностях работы государственных структур и являются выпускниками самых престижных юридических вузов. 
-				<br>
-				<br>
-				Адвокаты Бюро являются членами Национальных ассоциации адвокатов Украины, а один из них также входит в Международный Союз (Содружество) адвокатов.
-				<br>
-				<br>
-				Во всех юрисдикциях присутствия специалисты Бюро принимают активное участие в жизни делового и юридического сообщества и регулярно привлекаются в качестве консультантов по различным аспектам права органами исполнительной, законодательной и судебной власти.
-				<br>
-				<br>
-				<i>С  адвокатским бюро <b>«Успех»</b> вам всегда будет сопутствовать успех в делах.</i>
-			</p>
-		</div>
-
-		<div class="photo">
-			<img src="@routes.Assets.at("images/photo1.1.png")">
-			<h3>Саркисов Альберт Карленович</h3>
-			<img src="@routes.Assets.at("images/photo2.2.png")">
-			<h3>Семикин Вадим Витальевич</h3>
-			<img src="@routes.Assets.at("images/photo3.3.png")">
-			<h3>Руднев Олег Александрович</h3>
-	 	</div>
-
-		<div class="video">	
-			<iframe width="420" height="315" src="https://www.youtube.com/embed/NXDIKfShnWM" frameborder="0" allowfullscreen>
-			</iframe>
-		</div>
-
-	<div class="block-map">
-		<h1 id="mp">Нас можно найти здесь</h1>
-		<div class="map">
-			<h1>Загрузка карты...</h1>
-			<script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=9b__qJTm5YK_YoLRwcuHudqAzTb1lkye&width=900&height=400&lang=ru_UA&sourceType=constructor">
-			</script>
-		</div>
-	</div>
-
-	<div class="footer">
-		<div class="name-foot">
-			<h3>Адвокатское бюро:</h3>
-			<h2>"Успех"</h2>
-		</div>
-		<div class="foot-nav">
-			<a href="#ab">О Нас</a>
-			<a href="#mp">На карту</a>
-		</div>
-		<div class="foot-phone">
-			<p>Телефоны: 220-38-73, 270-40-11</p>
-			<p>Адресс: улица Жуковского, 82</p>
-		</div>
-	</div>
-	
-	</div>
-
+<div>
+</div>
 </body>
 </html>
