Alpha verions without makeup

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -19,7 +19,7 @@
 	{{ errors }}
 
 	<input type="button" ng-click="generate_link(site_url, tags)" value="Generate link">
-	<div ng-if="link-generate">Your generate link : {{ link_of }}</div>
+	<div ng-if="link_generate">Your generate link : {{ link_of }}</div>
 </div>
 
 <div>
